# qulacs

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_MPI.md  Untitled.ipynb  backprop_inner_product  build_gcc.sh  build_local.sh  circuito_sinxelo  circuito_sinxelo.cpp  ecr_unroll  exemplo_readme  funcion_SWAP  gen_pysrc_withstubs.sh  generate_msvc_project.bat  imprimir  main.cpp  main_test  main_test.cpp  primeira_proba  proba_Hadamard_mpi  proba_Hadamard_mpi.cpp  proba_MPI  proba_MPI.cpp  proba_circuito  proba_circuito.cpp  proba_ecr  proba_mpi  proba_nova.cpp  pyproject.toml  qulacs_mpi_272746.e  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: AdaptiveGate.py  CMakeLists.txt  NoiseSimulatorMPI_benchmark.cpp  NoiseSimulator_benchmark.cpp  NoiseSimulator_exp_benchmark.cpp  Python-NoiseSimulator.py  Python-NoiseSimulatorMPI.py  bench_circuit.py  benchmark2.txt  causalconetest.cpp  causalconetest2.cpp  causalconetestMPI.cpp  get_matrix_test.py  libcppsim_benchmark.cpp  libcppsimexp_benchmark.cpp  libcsim_benchmark.cpp  merge_circuit.py  test_qulacs_1.py  test_qulacs_2.py  verify_GradCalculator.cpp  verify_GradCalculatorMPI.cpp
build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_script/: FindAVX2.cmake  FindSVE.cmake
coverage/: coverage.info  (+1 more)
python/: CMakeLists.txt  cppsim_wrapper.cpp  qulacs_osaka_wrapper.cpp
python/stub-test/: generate_mypy_tester.py  generate_mypy_tester_qulacs.py  mypy-import-test-qulacs-osaka.py  mypy-import-test-qulacs.py
python/test/: test_pycppsim.py  test_qulacs.py  test_qulacs2.py  test_qulacs2.py~  test_qulacs_multicpu.py  test_qulacs_osaka.py  test_tashizan.py
python/test/backup/: tashizan.py  test_qulacs.py
python/test/backup_20211224/: tashizan.py~  test_qulacs.py
python/tests/multi_cpu/: conftest.py  test_circuit_optimizer.py  test_gate_pauli_multi_cpu.py  test_state_multi_cpu.py
python/tests/single_cpu/: conftest.py  test_circuit.py  test_density_matrix_handling.py  test_json.py  test_noise_simulator.py  test_observable.py  test_pickle.py  test_pointer_handling.py  test_qasm.py  test_state.py  test_utils.py
src/: CMakeLists.txt  include_some.hpp  proba_matrices.cpp
src/cppsim/: CMakeLists.txt  KAK.hpp  KAKCSD.hpp  causal_cone.cpp  causal_cone.hpp  circuit.cpp  circuit.hpp  circuit_builder.hpp  circuit_optimizer.cpp  circuit_optimizer.hpp  debug.txt.  exception.hpp  gate.cpp  gate.hpp  gate_factory.cpp  gate_factory.hpp  gate_general.cpp  gate_general.hpp  gate_inverse.hpp  gate_linear_combination.hpp  gate_matrix.cpp  gate_matrix.hpp  gate_matrix_diagonal.cpp  gate_matrix_diagonal.hpp  gate_matrix_sparse.cpp  gate_matrix_sparse.hpp  gate_merge.cpp  gate_merge.hpp  gate_named.hpp  gate_named_npair.hpp  gate_named_one.cpp  gate_named_one.hpp  gate_named_pauli.hpp  gate_named_two.hpp  gate_noisy_evolution.cpp  gate_noisy_evolution.hpp  gate_reflect.hpp  gate_reversible.hpp  gate_to_gqo.hpp  gate_to_qgo.cpp  (+30 more)
src/cppsim_experimental/: CMakeLists.txt  bravyi_kitaev.cpp  bravyi_kitaev.hpp  causal_cone.hpp  circuit.cpp  circuit.hpp  fermion_operator.cpp  fermion_operator.hpp  gate.cpp  gate.hpp  gate_base.hpp  gate_basic.cpp  gate_basic.hpp  gate_wrapper.cpp  gate_wrapper.hpp  jordan_wigner.cpp  jordan_wigner.hpp  noisesimulator.cpp  noisesimulator.hpp  observable.cpp  observable.hpp  pauli_operator.cpp  pauli_operator.hpp  single_fermion_operator.cpp  single_fermion_operator.hpp  state.cpp  state.hpp  state_dm.cpp  state_dm.hpp  state_gpu.cpp  state_gpu.hpp  type.hpp  utility.cpp  utility.hpp
src/csim/: CMakeLists.txt  MPIutil.c  MPIutil.cpp  MPIutil.h  MPIutil.hpp  constant.c  constant.cpp  constant.h  constant.hpp  init_ops.c  init_ops.h  init_ops.hpp  init_ops_fill.c  init_ops_fill.cpp  init_ops_random.c  init_ops_random.cpp  memory_ops.c  memory_ops.cpp  memory_ops.h  memory_ops.hpp  memory_ops_dm.c  memory_ops_dm.cpp  memory_ops_dm.h  memory_ops_dm.hpp  stat_ops.c  stat_ops.cpp  stat_ops.h  stat_ops.hpp  stat_ops_dm.c  stat_ops_dm.cpp  stat_ops_dm.h  stat_ops_dm.hpp  stat_ops_expectation_value.c  stat_ops_expectation_value.cpp  stat_ops_probability.c  stat_ops_probability.cpp  stat_ops_transition_amplitude.c  stat_ops_transition_amplitude.cpp  type.h  type.hpp  (+71 more)
src/csim_old/: CMakeLists.txt  constant.c  constant.h  memory_ops.c  memory_ops.h  memory_ops_dm.c  memory_ops_dm.h  stat_ops.c  stat_ops.h  stat_ops_dm.c  stat_ops_dm.h  type.h  update_ops.h  update_ops_cpp.cpp  update_ops_cpp.hpp  update_ops_dm.c  update_ops_dm.h  update_ops_multi.c  update_ops_named.c  update_ops_qft.c  update_ops_reflect.c  update_ops_single.c  utility.h
src/csim_simd/: CMakeLists.txt  memory_ops.c  update_ops_cpp.cpp  update_ops_multi.c  update_ops_named.c  update_ops_named_H.c  update_ops_named_X.c  update_ops_named_Y.c  update_ops_named_Z.c
src/gpusim/: CMakeLists.txt  QCsim.cu  compile.sh  gpu_wrapping.h  make_projectfiles_and_compile.bat  memory_ops.cu  memory_ops.h  memory_ops_device_functions.h  stat_ops.cu  stat_ops.h  stat_ops_device_functions.h  test.cpp  update_ops_cuda.h  update_ops_cuda_device_functions.h  update_ops_multi.cu  update_ops_named.cu  update_ops_single.cu  util.cu  util.cuh  util.h  util_common.h  util_export.h  util_func.h  util_type.h  util_type_internal.h
src/mpisim/: CMakeLists.txt  GradCalculatorMPI.cpp  GradCalculatorMPI.hpp  causal_coneMPI.hpp  noisesimulatorMPI.cpp  noisesimulatorMPI.hpp  utils.hpp
src/vqcsim/: CMakeLists.txt  GradCalculator.cpp  GradCalculator.hpp  boolean_formula.hpp  causalcone_simulator.cpp  causalcone_simulator.hpp  differential.cpp  differential.hpp  loss_function.cpp  loss_function.hpp  obs_etc.cpp  optimizer.cpp  optimizer.hpp  parametric_circuit.cpp  parametric_circuit.hpp  parametric_circuit_builder.hpp  parametric_gate.cpp  parametric_gate.hpp  parametric_gate_factory.cpp  parametric_gate_factory.hpp  parametric_simulator.cpp  parametric_simulator.hpp  problem.cpp  problem.hpp  simulator_parametric.cpp  solver.cpp  solver.hpp
(+416 files in other folders)
